added Gradient in my app

--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,21 @@
 @import url('https://fonts.googleapis.com/css2?family=Cabin:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap');
 
 html, body {
-  width: 100vw;
-  height: 100vh;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+#root {
+  height: 100%;
 }
 
 .App {
-  color: black;
+  background: linear-gradient(102deg,#951318,#308fd3,#12333f,#a93802);
+  background-size: 240% 240%;
+  animation: gradient-animation 16s ease infinite;
+  height: 100%;
+  width: 100%;
 }
 
 .zoom {
@@ -52,3 +61,43 @@ html, body {
 .craft:hover{
   transform: scale(0.9);
 }
+
+.gradient-background {
+  background: linear-gradient(102deg,#951318,#308fd3,#12333f,#a93802);
+  background-size: 240% 240%;
+  animation: gradient-animation 16s ease infinite;
+  /* animation: noiseFX 2s steps(6) infinite; */
+ 
+
+}
+
+@keyframes gradient-animation {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
+
+.Button {
+  background-color:#e7e7e7; color: grey; 
+  border-radius: 12px;
+  border: none;
+  color: black;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+    transition-duration: 0.4s;
+  }
+  
+  .Button:hover {
+    background-color: grey; 
+    color: white;
+  }
+
