--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,9 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Cabin:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Cabin:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Cabin:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap');
 
 html, body {
@@ -11,9 +17,9 @@ html, body {
 }
 
 .App {
-  background: linear-gradient(102deg,#951318,#308fd3,#12333f,#a93802);
+  /* background: linear-gradient(102deg,#951318,#308fd3,#12333f,#a93802);
   background-size: 240% 240%;
-  animation: gradient-animation 16s ease infinite;
+  animation: gradient-animation 16s ease infinite; */
   height: 100%;
   width: 100%;
 }
@@ -62,14 +68,14 @@ html, body {
   transform: scale(0.9);
 }
 
-.gradient-background {
+/* .gradient-background {
   background: linear-gradient(102deg,#951318,#308fd3,#12333f,#a93802);
   background-size: 240% 240%;
-  animation: gradient-animation 16s ease infinite;
+  animation: gradient-animation 16s ease infinite; */
   /* animation: noiseFX 2s steps(6) infinite; */
  
 
-}
+/* }
 
 @keyframes gradient-animation {
   0% {
@@ -81,7 +87,7 @@ html, body {
   100% {
     background-position: 0% 50%;
   }
-}
+} */
 
 .Button {
   background-color:#e7e7e7; color: grey; 
