--- a/src/pages/ToDoList/ToDoList.css
+++ b/src/pages/ToDoList/ToDoList.css
@@ -21,7 +21,7 @@ textarea:focus, input:focus{
 }
 
 .xyz {
-    background-color: white;
+    /* background-color: white; */
     width: 80rem;
     border-radius: 2rem;
     height: 35rem;
@@ -33,22 +33,25 @@ textarea:focus, input:focus{
 }
 .input {
         width: 50rem;
-        height: 2.2rem;
+        height: 2.4rem;
+        border: 1px solid #3F403F;
         border-radius: 0.4rem;
+        padding-left: 1rem;
+        text-justify: auto;
         margin-top: 3rem;
         margin-left: 11rem;
 }
 
 .button {
         background-color:#e7e7e7; color: black; 
-        border: none;
+        border: 1px solid #3F403F;
         color: black;
         text-align: center;
         transition-duration: 0.4s;
         width: 6rem;
         height: 2.4rem;
         border-radius: 0.4rem;
-        border: none;
+        /* border: none; */
 }
 
 .button:hover {
@@ -57,9 +60,9 @@ textarea:focus, input:focus{
 }
 .list {
         width: 50rem;
-        margin-top: 2rem;
+        margin-top: 1rem;
         color: white;
-        height: 40rem;
-        /* overflow-y: scroll; */
-        margin-left: 10rem;
+        height: 20rem;
+        overflow-y: auto;
+        margin-left: 13rem;
 }
