--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Cabin:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Limelight&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Silkscreen:wght@400;700&family=Spline+Sans+Mono:ital,wght@0,300..700;1,300..700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Righteous&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Marmelad&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Righteous&display=swap");
 
 html,
 body {
@@ -28,8 +29,6 @@ body {
 }
 
 .zoom {
-  margin-left: 1.2rem;
-  margin-right: 1.2rem;
   /* width: 3.2rem;
   height: 3.2rem; */
   display: flex;
